feat: draft preview mode with dev command

--- a/404.html
+++ b/404.html
@@ -23,8 +23,12 @@
 
     <meta property="og:title" content="Page Not Found | Harshit Sharma">
     <meta property="og:description" content="The page you're looking for doesn't exist or has been moved.">
+    <meta property="og:image" content="/assets/images/og-default.png">
 
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Page Not Found | Harshit Sharma">
+    <meta name="twitter:description" content="The page you're looking for doesn't exist or has been moved.">
+    <meta name="twitter:image" content="/assets/images/og-default.png">
 
     <script src="/js/theme-init.js"></script>
 </head>
