--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
   <meta property="og:title" content="Harshit Sharma | Posts">
   <meta property="og:description"
     content="Personal blog exploring philosophical thoughts on Existentialism and Vedanta.">
+  <meta property="og:image" content="/assets/images/og-default.png">
 
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Harshit Sharma | Posts">
+  <meta name="twitter:description"
+    content="Personal blog exploring philosophical thoughts on Existentialism and Vedanta.">
+  <meta name="twitter:image" content="/assets/images/og-default.png">
 
   <script src="js/theme-init.js"></script>
 </head>
