--- a/about.html
+++ b/about.html
@@ -20,7 +20,12 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="About | Harshit Sharma">
     <meta property="og:description" content="About Harshit Sharma">
+    <meta property="og:image" content="/assets/images/og-default.png">
+
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="About | Harshit Sharma">
+    <meta name="twitter:description" content="About Harshit Sharma">
+    <meta name="twitter:image" content="/assets/images/og-default.png">
 
     <script src="js/theme-init.js"></script>
 </head>
