--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="About Harshit Sharma">
     <meta name="author" content="Harshit Sharma">
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; style-src 'self'; font-src 'self'; script-src 'self'; img-src 'self' data:;">
+        content="default-src 'self'; style-src 'self'; font-src 'self'; script-src 'self'; img-src 'self' data:; frame-ancestors 'none'; base-uri 'self';">
     <title>About | Harshit Sharma</title>
     <link rel="icon" href="/assets/icons/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.svg">
