fix: external links, link styling, dev auto-rebuild

--- a/about.html
+++ b/about.html
@@ -40,6 +40,28 @@
                     <header class="about-header">
                         <h1>About</h1>
                     </header>
+                    <section class="about-body">
+                        <p>
+                            Hi, I'm <strong>Your Name</strong>. Welcome to my corner of the internet.
+                        </p>
+                        <p>
+                            I write about topics that interest me. This space is where I share my thoughts,
+                            learnings, and experiments.
+                        </p>
+
+                        <h2>What I Do</h2>
+                        <p>
+                            A brief description of your work, interests, or expertise goes here.
+                            Feel free to add multiple paragraphs.
+                        </p>
+
+                        <h2>Get in Touch</h2>
+                        <p>
+                            You can find me on <a href="https://twitter.com/yourusername" target="_blank"
+                                rel="noopener noreferrer">X/Twitter</a>
+                            or reach out via email.
+                        </p>
+                    </section>
                 </article>
             </div>
         </main>
